syntax = "proto3";

package microservice;

option go_package = "github.com/zhang/microservice/proto";

// 用户服务
service UserService {
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  // 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// 获取用户请求
message GetUserRequest {
  int64 id = 1;
}

// 获取用户响应
message GetUserResponse {
  User user = 1;
}

// 创建用户请求
message CreateUserRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
}

// 创建用户响应
message CreateUserResponse {
  User user = 1;
}

// 更新用户请求
message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
}

// 更新用户响应
message UpdateUserResponse {
  User user = 1;
}

// 删除用户请求
message DeleteUserRequest {
  int64 id = 1;
}

// 删除用户响应
message DeleteUserResponse {
  bool success = 1;
}

// 用户模型
message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string created_at = 5;
  string updated_at = 6;
}

